@@ -2563,6 +2563,8 @@ cobc_def_dump_opts (const char *opt, const int on)
 		} else {
 			cb_flag_dump = COB_DUMP_NONE;
 		}
+		if (cb_flag_dump)
+			cb_flag_symbols = 1;
 		return;
 	}
 
@@ -2598,6 +2600,8 @@ cobc_def_dump_opts (const char *opt, const int on)
 	} else {
 		cb_flag_dump ^= dump_to_set;
 	}
+	if (cb_flag_dump)
+		cb_flag_symbols = 1;
 	cobc_free (p);
 }
 
@@ -3175,6 +3179,7 @@ process_command_line (const int argc, char **argv)
 			/* -G : Generate C debug code for use with gdb on COBOL source */
 			gflag_set = 1;
 			cb_cob_line_num = 1;
+			cb_flag_symbols = 1;
 			cb_flag_remove_unreachable = 0;
 			break;
 
@@ -3737,6 +3742,8 @@ process_command_line (const int argc, char **argv)
 	if (cb_flag_traceall) {
 		cb_flag_trace = 1;
 		cb_flag_source_location = 1;
+	}
+	if (cb_flag_trace) {
 		cb_flag_symbols = 1;
 	}
 	if (cb_flag_c_line_directives) {
